# gobo

./: .gitignore  pyproject.toml
gobo/: range.py
src/gobo/: corner_plot.py  high_level.py
src/gobo/internal/: corner_plot.py  histogram.py
src/gobo/internal/high_level/: histogram.py  light_curve.py
test/: test_range.py
