[tool.poetry]
name = "gobo"
version = "0.1.0"
description = ""
authors = ["Greg Olmschenk <greg@olmschenk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
bokeh = { version = "^3.0.0rc3", allow-prereleases = true }
pytest = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
