[project]
name = "gobo"
dynamic = ["version"]
description = ""
readme = "README.md"
authors = [
    { name = "golmschenk", email = "greg@olmschenk.com" },
]
requires-python = ">=3.9"
dependencies = [
    "bokeh>=3.0.0",
    "pytest>=7.1.3",
    "selenium>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/gobo/__about__.py"